Second Nav Done - fell bugs to fix -align horizontal

--- a/static/CSS/style.css
+++ b/static/CSS/style.css
@@ -18,6 +18,9 @@
 }
 
 /* Keyframes for the pulse animation */
+/* FORM FIRST NAVIGATION */
+
+/*Animations */
 @keyframes pulse {
     0% {
         transform: scale(1) rotate(0deg);
@@ -35,13 +38,22 @@
         transform: scale(1) rotate(360deg);
     }
 }
-/* FORM FIRST NAVIGATION */
+
+.nav-link {
+    transition: margin-top 0.3s ease;
+}
+
+.nav-link:hover {
+    margin-top: -5px;
+    color: #768390!important; 
+}
+/*Animations */
 
 
-/* Default styles for screens smaller than 600 pixels */
 .search-input-container {
     width: 90vw;
 }
+
 
 /* Styles for screens larger than 600 pixels */
 @media (min-width: 600px) {
@@ -57,6 +69,10 @@
         width: 60vw;
         margin-left: 5vw;
     }
+    .navbar-custom {
+        height: 50px; 
+    }
+    
 }
 
 
